<resources>
    <string name="app_name">Team6</string>
    <string name="please_enter_a_us_zip_code">Please enter a US ZIP Code</string>
    <string name="team6">Team 6</string>
    <string name="at_your_service">At your service</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="about">About</string>
    <string name="team_member">- Tianqi Jin\n- Wenzhu Chen\n- Liyuan Cao\n- Yifeng Li</string>
    <string name="stick_it_to_em">Stick It To Em</string>
    <string name="enter_username">Please enter your username</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_info">Welcome, \t</string>
    <string name="select_sticker">Please select a sticker you want to send: </string>
    <string name="sticker_of_fox">sticker of fox</string>
    <string name="sticker_of_crocodile">sticker of crocodile</string>
    <string name="sticker_of_bee">sticker of bee</string>
    <string name="sticker_of_panda">sticker of panda</string>
    <string name="select_receiver">Please select a receiver:</string>
    <string name="send">Send</string>
    <string name="select">select</string>
    <string name="send_count">Send count</string>
    <string name="receiving_history">Receiving History</string>
    <string name="received_sticker">received sticker</string>
    <string name="sender">Sender</string>
    <string name="time">Time</string>
    <string name="map">Map</string>
    <string name="parks">Parks</string>
    <string name="hint_search">Enter State code: CA, WY, OR...</string>
    <string name="reviews">Reviews</string>
    <string name="textview">TextView</string>
    <string name="operating_hours">Operating Hours</string>
    <string name="no_directions">Directions not available</string>
    <string name="info_unavailable">Info not available</string>
    <string name="cur_park_name">Park Name</string>
    <string name="write_review">Write review</string>
    <string name="please_write_review_description">Share detail of your experience at this park here</string>
    <string name="rate_for_this_park">Rate for this park</string>
    <string name="write_review_content">Please write your review here</string>
    <string name="your_name">Please enter your name here</string>
    <string name="park">Park</string>
    <string name="post">Post</string>
    <string name="_0_0">0.0</string>
    <string name="_0">(0)</string>
    <string name="username">user name</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="content_of_review">content of review</string>
    <string name="team_6_final_project">Final Project: Park Finder</string>
    <string name="state_s">State(s):</string>
    <string name="park_designation">Park designation</string>
    <string name="topics">Topics</string>
    <string name="entrance_fees">Entrance Fees</string>
    <string name="description">Description</string>
    <string name="activities">Activities</string>
    <string name="directions">Directions</string>
    <string name="type">Type</string>
    <string name="_0_0_">0 (0)</string>
</resources>