<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_cloud_sky"
    android:orientation="vertical"
    tools:context=".nationalparks.activity.DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:paddingBottom="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_park_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/text_color_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsf_park_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/text_color_paragraph"
                android:text="@string/textview" />

            <RelativeLayout
                android:id="@+id/totalRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/detailsRatingBar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:progressTint="#FFC107"
                        android:secondaryProgressTint="#FFC107" />

                    <TextView
                        android:id="@+id/detailsRatingNum"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="13sp"
                        android:layout_marginStart="25dp"
                        android:text="@string/_0_0_" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/goToReview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/reviews"
                        android:textSize="15sp"
                        android:textColor="@color/purple_700"
                        android:clickable="false"
                        android:gravity="center_vertical" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:layout_marginEnd="6dp"
                        android:clickable="false"
                        android:src="@drawable/baseline_chevron_right_40"
                        app:tint="@color/purple_700" />
                </LinearLayout>


            </RelativeLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/details_viewpager"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

            </androidx.viewpager2.widget.ViewPager2>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:textAlignment="center"
                android:text="@string/topics"
                android:textColor="@color/text_color_title"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_topics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_color_paragraph"
                android:paddingLeft="6dp"
                android:text="@string/topics" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="6dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_color_title"
                android:text="@string/operating_hours"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_operatinghours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_color_paragraph"
                android:paddingStart="6dp"
                android:text="@string/operating_hours" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="6dp"
                android:textColor="@color/text_color_title"
                android:textAlignment="center"
                android:text="@string/entrance_fees"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_entrancefees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="6dp"
                android:textColor="@color/text_color_paragraph"
                android:text="@string/entrance_fees" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:text="@string/description"
                android:textColor="@color/text_color_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:text="@string/description"
                android:textColor="@color/text_color_paragraph"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:paddingLeft="6dp"
                android:text="@string/activities"
                android:textColor="@color/text_color_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_activities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_color_paragraph"
                android:paddingLeft="6dp"
                android:text="@string/activities" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:textAlignment="center"
                android:text="@string/directions"
                android:textColor="@color/text_color_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:layout_marginTop="4dp"
                android:text="@string/directions"
                android:paddingBottom="70dp"
                android:textColor="@color/text_color_paragraph"
                android:textAlignment="textStart" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>